# BindStuff

./: .gitignore  AGENTS.md  Makefile  README.md  bindcraft.py  inspect_freesasa.py  install_bindstuff.sh  pyproject.toml  pytest.ini  run_tests.py  test_import.py  wget-log
.github/workflows/: python-ci.yml
alphafold/common/: protein.py  residue_constants_test.py  stereo_chemical_props.txt
alphafold/data/: msa_pairing.py
alphafold/data/tools/: jackhmmer.py
alphafold/model/: all_atom_multimer.py  common_modules.py  folding_multimer.py  modules.py  quat_affine_test.py  r3.py  utils.py
alphafold/relax/: amber_minimize.py  utils_test.py
examples/: BindStuff.ipynb  run_example.ipynb  run_example.py
functions/: __init__.py  biopython_utils.py  colabdesign_utils.py  generic_utils.py  more_utils.py  open_source_adapter.py  open_source_utils.py  pipeline.py  relax_wrapper.py  scoring.py  struct_utils.py
notebooks/: BindCraft.ipynb
pdbfixer/: __init__.py  pdbfixer.py
scripts/: run_bindstuff.py
settings_target/: PDL1.json
tests/: test_biopython_utils.py  test_colabdesign_utils.py  test_generic_utils.py  test_open_source_utils.py  test_relax_wrapper.py  test_scoring.py  test_struct_utils.py
